7/9/10 attempt to fix plate area drag handle, still broken
7/9/10 move model listener responsibilities into drag handle nodes
7/9/10 fix drag handles for dielectric offset and plate separation 
7/8/10 add overload indicator to bar meters
5/21/10 started work on a model-independent voltmeter (incomplete, see TODO.txt)
5/20/10 copy voltmeter image files from CCK, confirmed licensing with Sam R.
5/20/10 capacitance meter
5/20/10 create base class for bar meters, refactor existing meters
# 0.00.05 (40913) May 19, 2010
5/19/10 dev version to verify model changes
5/19/10 implement new model of charge, surface charge density, and E-field, as specified by NP
5/19/10 change variable names in ModelValuesPanel to match variable names in design doc
5/19/10 rework model assertions and arg checking
5/19/10 new model of surface charge density, to avoid divide-by-zero errors when area=0
5/19/10 assert necessary model conditions
5/19/10 add support for negative dielectric offset
5/19/10 add Stored Energy meter
5/19/10 consolidate meter range constants in CLConstants
# 0.00.04 (40879) May 19, 2010
5/19/10 new model, plate charge meter, disconnect plate charge control
5/18/10 reorganize model to be similar to specification
5/18/10 add dielectric offset to model values display
5/18/10 add descriptions to model values display via tool tips
5/18/10 display model values in a dialog, too crowded in the play area
5/18/10 implement new model provided by NP, using "2 parallel capacitors" approach
5/17/10 display plate charge value the same way in control and meter
5/17/10 add background to plate charge control
5/17/10 custom Piccolo slider for plate charge, first pass
5/17/10 change model so that user can set either voltage or charge
5/17/10 create spreadsheet version of model, for verification and debugging
5/17/10 revise model description
5/17/10 change format of values in Developer meter
5/15/10 concise model description in doc/model.txt
# 0.00.03 (40785) May 15, 2010