@@ -45,6 +45,7 @@ radioButton.charges.showExcess=Show excess charges
 
 tab.introduction=Introduction
 tab.dielectric=Dielectric
+tab.multipleCapacitors=Multiple Capacitors
 
 title.dielectric=Dielectric
 title.view=View
