@@ -1,0 +1,22 @@
+/* Copyright 2010, University of Colorado */
+
+package edu.colorado.phet.capacitorlab.module.multiplecapacitors;
+
+import edu.colorado.phet.capacitorlab.model.CLModel;
+import edu.colorado.phet.capacitorlab.module.CLCanvas;
+
+/**
+ * Canvas for the "Multiple Capacitors" module.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class MultipleCapacitorsCanvas extends CLCanvas {
+
+    public MultipleCapacitorsCanvas( CLModel model, boolean dev ) {
+        //XXX
+    }
+    
+    public void reset() {
+        //XXX
+    }
+}
