@@ -1,0 +1,17 @@
+/* Copyright 2010, University of Colorado */
+
+package edu.colorado.phet.capacitorlab.module.multiplecapacitors;
+
+import edu.colorado.phet.capacitorlab.module.CLControlPanel;
+
+/**
+ * Control panel for the "Introduction" module.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class MultipleCapacitorsControlPanel extends CLControlPanel {
+
+    public MultipleCapacitorsControlPanel( MultipleCapacitorsModule module ) {
+        addResetAllButton( module );
+    }
+}
